# Robot_Graphic

./: .gitignore  CMakeLists.txt  LEARNING_NOTES.md  Makefile  README.md  settings.local.json
include/: camera.h  cube.h  robot.h  scene.h  shader.h
include/glad/: glad.h
shaders/: fragment_shader.glsl  vertex_shader.glsl
src/: camera.cpp  cube.cpp  glad.c  main.cpp  robot.cpp  scene.cpp  shader.cpp
